
You might be wondering what this brings over just using the whole JBehave tool
standalone. Well, it gives you access to the Gherkin language in your features,
which is a richer DSL than JBehave's language. -Over 20 spoken languages, Tables, 
Scenario Outlines, the rich command line, the nice output format and everything 
pure Ruby users have been enjoying for a while.

== Bugfixes
* No output for multi-line strings (#71 Aslak Hellesøy)
* Fix cucumber/formatters/unicode flaws on Windows (#145 Michael)
* Autotest-related Bugs: YAML missing (#136 Tobias Pape)
* Overeager "rescue LoadError" hides lots of errors (#137 Jonathan del Strother)
* Pending steps in > steps called from steps (#65 Aslak Hellesøy)

=== New features
* Tagging scenarios and features. Pick the ones to run with --tags (#54 Aslak Hellesøy)
* Make the current scenario available to the steps. (#44 Aslak Hellesøy)
* Step definition snippets contain a 'pending' call (#84 Aslak Hellesøy)
* Call multiline steps from other steps (#144 Aslak Hellesøy)
* Run cucumber with --autoformat DIR to reformat (pretty print) all of your feature files. (Aslak Hellesøy)
* New --strict option exits with an error code if there are undefined or pending steps. (Aslak Hellesøy)
* Given, When, Then are automatically aliased to current language. 
  Ruby 1.8 doesn't allow non-ascii method names in the source, so unless you're on 1.9
  you will have to use Given, When, Then or set up your own aliases. Here is Norwegian:
    Cucumber.alias_steps(%w{Naar Saa}) # Når, Så already aliased, but can't be called. (Aslak Hellesøy)
* Run cucumber --language help to see all supported languages. (Aslak Hellesøy)
* Run cucumber --language LANG help to see keywords for a given language. (Aslak Hellesøy)
* Multiline arguments (tables and """ strings) are printed in the output. (Aslak Hellesøy)
* It's no longer necessary to compile the Treetop grammar when adding a new language. Localised parser is generated at runtime. (Aslak Hellesøy)
