@@ -108,9 +108,9 @@ module Cucumber
       end
 
       rule examples
-        space* examples_keyword white table {
+        space* examples_keyword space* name:line_to_eol? eol+ table {
           def build
-            [examples_keyword.line, examples_keyword.text_value, "", table.raw]
+            [examples_keyword.line, examples_keyword.text_value, name.text_value, table.raw]
           end
         }
       end
